# TicTacToe

TicTacToe/: CMakeLists.txt
TicTacToe/TicTacApp/: CMakeLists.txt  main.cpp
TicTacToe/TicTacLib/: CMakeLists.txt
TicTacToe/TicTacLib/include/: board.hpp  console.hpp  game.hpp
TicTacToe/TicTacLib/src/: board.cpp  console.cpp
